--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "packages": [
       "packages/**/*"
     ]
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   }
 }
