feat: implement initial settings of react.js client workspace

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adrianomonteirodev-portfolio",
+  "name": "adrianomonteirodev",
   "version": "1.0.0",
   "description": "Repositório de um portfólio em React.js, Node.js e TypeScript.",
   "main": "index.js",
