--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,11 +16,11 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f ../../.env react-scripts start",
+    "build": "env-cmd -f ../../.env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "../../node_modules/.bin/cypress open"
+    "cy:open": "env-cmd -f ../../.env ../../node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.8.0"
+    "cypress": "^10.8.0",
+    "env-cmd": "^10.1.0"
   }
 }
